--- a/css/styles-Farsi.css
+++ b/css/styles-Farsi.css
@@ -515,6 +515,7 @@ iframe {
   color: #ffffff;
   padding-right: 10px;
   margin-top: 0px;
+  margin-right: 30px;
   text-align: center;
   text-decoration: none;
   font-weight: bold;
