--- a/css/styles.css
+++ b/css/styles.css
@@ -514,6 +514,7 @@ iframe {
   color: #ffffff;
   /*padding-right: 10px;*/
   margin-top: 0px;
+  margin-right: 30px;
   text-align: center;
   text-decoration: none;
   font-weight: bold;
