--- a/css/styles-Farsi.css
+++ b/css/styles-Farsi.css
@@ -506,7 +506,7 @@ iframe {
 ========================================================== */
 /*.section-language a{*/
 .section-language li a {
-  float: right;
+  float: left;
   width: 15%;
   top: 0;
   list-style-type: none;
