--- a/css/styles-Farsi.css
+++ b/css/styles-Farsi.css
@@ -521,8 +521,11 @@ iframe {
   font-weight: bold;
 }
 /*.section-language li a:hover{*/
-.link-language li a :hover {
+.section-language li :hover {
   background-color: #021533;
+}
+.section-language {
+  list-style-type: none;
 }
 .main-menu {
   width: 15%;
