--- a/css/styles-Farsi.css
+++ b/css/styles-Farsi.css
@@ -1003,6 +1003,7 @@ iframe {
   position: relative;
   height: 25px;
   margin-bottom: 10px;
+  background-color: #b7b2b2;
 }
 .progress > .progress-type {
   position: absolute;
